styles.css
/* ... */
.scrolling-words-box ul li {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  height: 4rem;
  list-style: none;
}

@keyframes scrollUp {
  0%,
  25% {
    transform: translateY(0);
  }
  25%,
  50% {
    transform: translateY(-20%);
  }
  50%,
  75% {
    transform: translateY(-40%);
  }
  75%,
  100% {
    transform: translateY(-60%);
  }
}

/* Section styles */
.section {
  margin: 0px auto;
  padding: 0px 0;
  text-align: center;
  color: #454a47;
  /* width: 100vw; */
}

.about-me-white {
  /* display: flex;
  justify-content: center;
  align-content: center; */
  /* padding: 5% 0; */
  margin: 20px auto;
  /* margin: -5% auto 0px auto; */
  min-height: 100vh;
  /* border: solid red 5px; */
}

.about-me {
  border: 5px solid rgb(232, 137, 153);
  padding: 60px 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;

  margin-top: 5%;
  background-color: rgb(241, 153, 168);
}

.block-quote-container {
  border: 3px solid rgb(232, 137, 153);
  border-radius: 25px;
  background-color: rgb(245, 191, 200);
  width: 50%;
  padding: 2% 5%;
  display: flex;
  flex-direction: column;
  margin: -100px auto 0px auto;
  /* box-shadow: 10px 20px 1px rgba(118, 118, 116, 0.491); */
  transition: box-shadow 0.5s ease-in-out; /* Add a transition for the box-shadow property */
  z-index: 1;
}

.block-quote {
  font-size: 20px;
  font-family: 'Manrope', sans-serif;
  font-weight: 700;
  font-style: italic;
  transition: transform 0.5s ease-in-out; /* Add a transition for the transform property */
}

/* Add a class for when the quote is raised */
.block-quote-container.raised {
  box-shadow: 20px 30px 2px rgba(118, 118, 116, 0.491); /* Adjust the shadow values */
  /* transform: translateY(-20px); Move the quote up */
}

.author-quote {
  margin-top: 1%;
  padding-right: 30%;
  align-self: flex-end;
}

.about-me-container {
  /* min-width: 100vw; */

  min-height: 75vh;
  padding: 0 3%;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: rgb(241, 153, 168);

  flex-wrap: wrap;
}

.box {
  /* border: solid red 5px; */
  flex: 1;

  max-height: 700px;
  min-width: 500px;
  max-width: 800px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  margin: 0;
}
.about-me-image {
  min-height: 600px;
  min-width: 500px;
  flex-direction: column;
  background-color: #fbbd0494;
  border-radius: 5%;
}

.about-me-image p {
  font-size: 25px;
  font-weight: 500px;
  margin-top: 2%;
}
.about-me-image a {
  color: inherit;
  text-decoration: none;
  font-size: 20px;
  font-weight: 500px;
  margin-top: 1%;
}
.about-me-image a:hover {
  color: white;
}
.original-img {
  height: 350px;
  width: 350px;
  border-radius: 50%;
  border: solid #fbbd0494 5px;
  object-fit: cover;
  object-position: 0 8%;
  /* box-shadow: 150px 0px 1px #fbbd048d; */
  transition: transform 0.5s ease-in-out;
}

.alt {
  height: 350px;
  width: 350px;
  border-radius: 50%;
  border: solid #fbbd0494 5px;
  object-fit: cover;
  object-position: 0 30%;
  /* box-shadow: 150px 0px 1px #fbbd048d; */
  transition: transform 0.5s ease-in-out;
}
/* .about-me-bio {
} */
.card {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.about-me-bio .card {
  /* padding: 5%; */
  background-color: white;
  height: 600px;
  width: 500px;
  border-radius: 5%;
  border: 1px solid #fbbd0494;
  box-shadow: 10px 10px 3px rgba(118, 118, 116, 0.491);
  transform-style: preserve-3d;
  transition: transform 0.5s;
}
.front h2 {
  align-self: baseline;
  text-decoration: underline;
  font-size: 30px;
}
.about-me-bio .card p {
  text-align: left;
  margin-top: 10px;
}
.about-me-bio .card button {
  margin-top: 30px;
  width: 150px;
  height: 50px;
  border-radius: 25px;
  border: 3px solid black;
  background-color: rgb(249, 186, 107);
  font-family: 'Manrope', sans-serif;
  font-weight: 500;
  font-size: 16px;
}
.about-me-bio .card button:hover {
  animation: shake 01s;
  animation-iteration-count: infinite;
  color: white;
}

@keyframes shake {
  0% {
    transform: translate(1px, 1px) rotate(0deg);
  }
  10% {
    transform: translate(-1px, -2px) rotate(-1deg);
  }
  20% {
    transform: translate(-3px, 0px) rotate(1deg);
  }
  30% {
    transform: translate(3px, 2px) rotate(0deg);
  }
  40% {
    transform: translate(1px, -1px) rotate(1deg);
  }
  50% {
    transform: translate(-1px, 2px) rotate(-1deg);
  }
  60% {
    transform: translate(-3px, 1px) rotate(0deg);
  }
  70% {
    transform: translate(3px, 1px) rotate(-1deg);
  }
  80% {
    transform: translate(-1px, -1px) rotate(1deg);
  }
  90% {
    transform: translate(1px, 2px) rotate(0deg);
  }
  100% {
    transform: translate(1px, -2px) rotate(-1deg);
  }
}

.about-me-bio .card.flipped {
  transform: rotateY(180deg);
}

.front,
.back {
  padding: 5%;
  display: flex;
  flex-direction: column;
  align-items: center;
  position: absolute;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
}

.back ul {
  list-style: none;
}

.back li {
  margin: 10px auto;
}

.front {
  z-index: 2;
}

.back {
  transform: rotateY(180deg);
}
.about-me-tools {
  min-height: 600px;
  width: 500px;
  /* display: flex; */
  /* flex-direction: column;
  justify-content: center; */
  background-color: #fbbd0494;
  border-radius: 5%;
}

.about-me-tools p {
  margin-bottom: 4%;
  font-size: 25px;
  font-weight: 500px;
}

.toolContainer {
  min-height: 150px;
  width: 400px;
  display: flex;
  background-color: #fbbd0494;
  justify-content: space-evenly;
  align-items: center;
}

.toolBox {
  display: flex;
  flex-direction: column;
  height: 50px;
  width: 50px;
  background-color: #2d302ed8;
  border: 2px solid black;
  border-radius: 50%;
}
.toolBox p {
  z-index: 1;
  text-align: center;
  font-size: 20px;
  color: black;
}

.toolBox img {
  margin: 0 auto;
  height: 75px;
  width: 75px;
}
/* ... */

